2006-11-27  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-database-chooser.h:
	* libgdict/gdict-database-chooser.c: Add API for selecting
	and unselecting a database using its name; add API for
	setting and getting the current database using its name.

	* libgdict/gdict-strategy-chooser.h:
	* libgdict/gdict-strategy-chooser.c: Ditto for the strategy
	chooser.

	* src/gdict-source-dialog.c: Commit source editing support:
	now you can update the source by double-clicking on the
	source list of the preferences dialog; still a bit rough
	around the edges, but it'll come into shape.

	* data/gnome-dictionary-preferences.glade: Update the
	source dialog UI: move the database and strategy advanced
	settings into their own tabs.

2006-11-26  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-defbox.c:
	(gdict_defbox_init_tags), (escape_link), (escape_phonetic),
	(gdict_defbox_insert_body): Add syntax highlighting to the
	definition body using what look like the only stable markers,
	i.e. links ({}) and phonetics (\\). Still missing the button
	press event spawining a new window.

	* libgdict/Makefile.am:
	* libgdict/gdict-strategy-chooser.h:
	* libgdict/gdict-strategy-chooser.c: Finally, add the
	GdictStrategyChooser widget to the build.

	* src/gdict-window.c: Use symbolic names for the sidebar
	pages ids.

	* src/gdict-window.h:
	* src/gdict-window.c:
	(gdict_window_cmd_view_strategies): Add support for the
	GdictStrategyChooser widget; use toggle actions for the
	View menu items of the sidebar and the statusbar.

	* data/gnome-dictionary-ui.xml: Add new action for the
	strategy chooser item.

	* src/gdict-window.c:
	(lookup_word), (entry_activate_cb),
	(gdict_window_constructor): Use a button with no relief
	instead of the 'Look up' label.

2006-10-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-about.c:
	* src/gdict-applet.c:
	* src/gdict-pref-dialog.c:
	* src/gdict-pref-dialog.h:
	* src/gdict-window.c: Add multihead support for the about